--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -9,12 +9,12 @@
       href: 'whitepaper.html',
       progress: '100'
     }, {
-      name: 'Roadmap',
-      href: 'roadmap.html',
-      progress: '1'
+      name: 'Landing',
+      href: 'landing.html',
+      progress: '100'
     }, {
       name: 'Roadmap',
-      href: 'roadmap-1.html',
+      href: 'roadmap.html',
       progress: '100'
     }, {
       name: 'Tokenomics',
