--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -29,6 +29,7 @@
 @import "_components/common/footer";
 
 @import "_components/homepage";
+@import "_components/landing";
 @import "_components/platform";
 @import "_components/token";
 @import "_components/donations";
