--- a/src/pug/roadmap.pug
+++ b/src/pug/roadmap.pug
@@ -1,11 +1,11 @@
 ---
 title: The Giving Pool | Roadmap
 
-pageClassName: p-home
+pageClassName: p-roadmap
 ---
 extends shared/_layout
 
 block content
   main.main(class!= pageClassName)
 
-    include components/roadmap
+    include components/milestone
