Home pages :::  - filled;

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,9 +30,9 @@
 
 @import "_components/homepage";
 @import "_components/landing";
-@import "_components/platform";
-@import "_components/token";
-@import "_components/donations";
+//@import "_components/platform";
+//@import "_components/token";
+//@import "_components/donations";
 @import "_components/whitepaper";
 @import "_components/roadmap";
 @import "_components/tokenomics";
