--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1171,6 +1171,81 @@ picture {
   color: #f53548;
 }
 
+@media screen and (max-width: 1023px) {
+  .landing.landing--home .landing__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .landing.landing--home .landing__col-1, .landing.landing--home .landing__col-3 {
+    opacity: 1;
+    -webkit-box-flex: 50%;
+        -ms-flex: 50%;
+            flex: 50%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .landing.landing--home .landing__col-1, .landing.landing--home .landing__col-3 {
+    display: block;
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .landing.landing--home .landing__col-1 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .landing.landing--home .landing__col-2 {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    max-width: 100%;
+  }
+  .landing.landing--home .landing__col-2 .logo {
+    width: 50%;
+  }
+  .landing.landing--home .landing__col-2 .logo__btn {
+    right: 0;
+    width: 100%;
+    max-width: 210px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .landing.landing--home .landing__col-2 .logo {
+    width: 100%;
+  }
+  .landing.landing--home .landing__col-2 .logo__btn {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .landing.landing--home .landing__col-3 {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+}
+.landing.landing--home .landing__wrapper-3 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-image: url("../img/img-landing-bg@2x.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: cover;
+}
+@media screen and (max-width: 767px) {
+  .landing.landing--home .landing__wrapper-3 {
+    padding-left: 20px;
+  }
+}
 .landing__container {
   padding: 45px 0 55px;
   background: -o-linear-gradient(179.5deg, #090F3A 0.56%, #493E3E 48.22%, #090F3A 99.66%), #FFFFFF;
@@ -1211,14 +1286,21 @@ picture {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .landing__col-1, .landing__col-3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1563,6 +1645,18 @@ picture {
     line-height: normal;
   }
 }
+.landing__title {
+  color: rgba(0, 0, 0, 0.25);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: normal;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+.landing__title span {
+  color: #f55757;
+}
 .landing__heading {
   font-weight: 900;
   font-size: 18px;
@@ -1596,6 +1690,41 @@ picture {
 .landing__desc:not(:last-of-type) {
   padding-bottom: 10px;
 }
+.landing__desc span {
+  color: #f55757;
+}
+.landing__desc .token {
+  word-break: break-all;
+}
+.landing__text {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: normal;
+  text-align: center;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.landing__text:not(:last-of-type) {
+  padding-bottom: 5px;
+}
+.landing__text-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 .landing__subtitle {
   font-weight: 900;
   font-size: 24px;
@@ -1616,6 +1745,229 @@ picture {
     font-size: 18px;
     line-height: 45px;
   }
+}
+.landing__stat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.landing__stat svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+.landing__stat-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  padding-left: 20px;
+}
+@media screen and (max-width: 767px) {
+  .landing__stat-wrapper {
+    padding-left: 0;
+  }
+}
+.landing__stat-title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 74px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #182333;
+  text-shadow: 0px 8px 7px #766F6F;
+}
+.landing__vote {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+@media screen and (max-width: 767px) {
+  .landing__vote {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .landing__vote > div {
+    width: 100%;
+  }
+}
+.landing__vote svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
+}
+.landing__vote-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+.landing__vote-title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 74px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #A2A2AC;
+  text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
+}
+.landing__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 402px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  border: 1px solid #682828;
+  -webkit-box-shadow: -17px 25px 12px rgba(35, 13, 13, 0.65);
+          box-shadow: -17px 25px 12px rgba(35, 13, 13, 0.65);
+  background-color: #1D0B0B;
+}
+.landing__box > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 58px;
+  padding: 5px 15px;
+  border-radius: 4px;
+  border: 1px solid #000000;
+  -webkit-box-shadow: 0px 4px 4px #000000;
+          box-shadow: 0px 4px 4px #000000;
+  background-color: #12182C;
+}
+.landing__box > div:not(:last-of-type) {
+  margin-bottom: 14px;
+}
+.landing__box > div img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-right: 10px;
+}
+.landing__box > div p {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 0;
+}
+.landing__box > div p span {
+  color: #F55757;
+}
+.landing__box > div p a {
+  color: #ffffff;
+}
+.landing__box-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .landing__box-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.landing__box-wrapper > div {
+  width: 50%;
+}
+@media screen and (max-width: 1023px) {
+  .landing__box-wrapper > div:first-of-type {
+    padding-right: 10px;
+  }
+  .landing__box-wrapper > div:last-of-type {
+    padding-left: 10px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .landing__box-wrapper > div {
+    width: 100%;
+  }
+  .landing__box-wrapper > div:first-of-type {
+    padding-right: 0;
+    padding-bottom: 20px;
+  }
+  .landing__box-wrapper > div:last-of-type {
+    padding-left: 0;
+  }
+}
+.landing__box-title {
+  padding-bottom: 10px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 74px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #A2A2AC;
+}
+@media screen and (max-width: 767px) {
+  .landing__box-title {
+    padding-bottom: 20px;
+    line-height: normal;
+  }
+}
+.landing__donate .landing__box {
+  max-width: 100%;
+}
+.landing__donate .landing__box > div {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.landing__donate .landing__box > div p {
+  letter-spacing: 3px;
+}
+.landing__donate .landing__box-wrapper > div {
+  width: 100%;
+  max-width: 845px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .whitepaper {
