--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,6 +17,4 @@ block modal
 block content
   main.main(class!= pageClassName)
 
-    include components/platform
-    include components/token
-    include components/donations
+    include components/landing-homepage
