--- a/src/scss/_components/landing.scss
+++ b/src/scss/_components/landing.scss
@@ -1,6 +1,84 @@
 // SECTION :: START
 
 .landing {
+  &.landing--home {
+    .landing {
+      &__row {
+        @include adaptive(1023) {
+          flex-wrap: wrap;
+        }
+      }
+
+      &__col {
+        &-1,
+        &-3 {
+          @include adaptive(1023) {
+            opacity: 1;
+            flex: 50%;
+          }
+          @include adaptive(767) {
+            display: block;
+            flex: 100%;
+          }
+        }
+
+        &-1 {
+          @include adaptive(1023) {
+            order: 2;
+          }
+        }
+
+        &-2 {
+          @include adaptive(1023) {
+            order: 1;
+            max-width: 100%;
+
+            .logo {
+              width: 50%;
+
+              &__btn {
+                right: 0;
+                width: 100%;
+                max-width: 210px;
+                margin-left: auto;
+                margin-right: auto;
+              }
+            }
+          }
+          @include adaptive(767) {
+            .logo {
+              width: 100%;
+
+              &__btn {
+                max-width: 100%;
+              }
+            }
+          }
+        }
+
+        &-3 {
+          @include adaptive(1023) {
+            order: 3;
+          }
+        }
+      }
+
+      &__wrapper {
+        &-3 {
+          padding-top: 50px;
+          padding-bottom: 50px;
+          background-image: url('../img/img-landing-bg@2x.png');
+          background-repeat: no-repeat;
+          background-position: center bottom;
+          background-size: cover;
+          @include adaptive(767) {
+            padding-left: 20px;
+          }
+        }
+      }
+    }
+  }
+
   &__container {
     padding: 45px 0 55px;
     background: linear-gradient(270.5deg, #090F3A 0.56%, #493E3E 48.22%, #090F3A 99.66%), #FFFFFF;
@@ -38,13 +116,16 @@
 
   &__row {
     display: flex;
-    align-items: flex-end;
+
+    align-items: center;
   }
 
   &__col {
     &-1,
     &-3 {
       display: flex;
+      align-items: center;
+      flex-direction: column;
       justify-content: center;
       flex: 1;
       min-width: 1px;
@@ -351,6 +432,20 @@
     }
   }
 
+  &__title {
+    color: rgba(#000, 0.25);
+    font-weight: 900;
+    font-size: 24px;
+    line-height: normal;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    span {
+      color: #f55757;
+    }
+  }
+
   &__heading {
     font-weight: 900;
     font-size: 18px;
@@ -381,6 +476,39 @@
     &:not(:last-of-type) {
       padding-bottom: 10px;
     }
+
+    span {
+      color: #f55757;
+    }
+
+    .token {
+      word-break: break-all;
+    }
+  }
+
+  &__text {
+    font-weight: 400;
+    font-size: 8px;
+    line-height: normal;
+    text-align: center;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+    &:not(:last-of-type) {
+      padding-bottom: 5px;
+    }
+
+    &-wrapper {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      width: 100%;
+      max-width: 320px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
   }
 
   &__subtitle {
@@ -398,6 +526,204 @@
     @include adaptive(767) {
       font-size: 18px;
       line-height: 45px;
+    }
+  }
+
+  &__stat {
+    display: flex;
+    align-items: flex-start;
+
+    svg {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &-wrapper {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+      padding-left: 20px;
+      @include adaptive(767) {
+        padding-left: 0;
+      }
+    }
+
+    &-title {
+      font-weight: 900;
+      font-size: 24px;
+      line-height: 74px;
+      text-align: center;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: #182333;
+      text-shadow: 0px 8px 7px #766F6F;
+    }
+  }
+
+  &__vote {
+    display: flex;
+    align-items: flex-start;
+    @include adaptive(767) {
+      flex-wrap: wrap;
+
+      > div {
+        width: 100%;
+      }
+    }
+
+    svg {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin-left: auto;
+      margin-right: auto;
+      filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
+    }
+
+    &-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    &-title {
+      font-weight: 900;
+      font-size: 24px;
+      line-height: 74px;
+      text-align: center;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: #A2A2AC;
+      text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  &__box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 402px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    border: 1px solid #682828;
+    box-shadow: -17px 25px 12px rgba(35, 13, 13, 0.65);
+    background-color: #1D0B0B;
+
+    > div {
+      display: flex;
+      align-items: center;
+      min-height: 58px;
+      padding: 5px 15px;
+      border-radius: 4px;
+      border: 1px solid #000000;
+      box-shadow: 0px 4px 4px #000000;
+      background-color: #12182C;
+
+      &:not(:last-of-type) {
+        margin-bottom: 14px;
+      }
+
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+        margin-right: 10px;
+      }
+
+      p {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 18px;
+        text-transform: uppercase;
+        color: #ffffff;
+        letter-spacing: 0;
+
+        span {
+          color: #F55757;
+        }
+
+        a {
+          color: #ffffff;
+        }
+      }
+    }
+
+    &-wrapper {
+      display: flex;
+      @include adaptive(767) {
+        flex-wrap: wrap;
+      }
+
+      > div {
+        width: 50%;
+        @include adaptive(1023) {
+          &:first-of-type {
+            padding-right: 10px;
+          }
+          &:last-of-type {
+            padding-left: 10px;
+          }
+        }
+        @include adaptive(767) {
+          width: 100%;
+
+          &:first-of-type {
+            padding-right: 0;
+            padding-bottom: 20px;
+          }
+          &:last-of-type {
+            padding-left: 0;
+          }
+        }
+      }
+    }
+
+    &-title {
+      padding-bottom: 10px;
+      font-weight: 900;
+      font-size: 24px;
+      line-height: 74px;
+      text-align: center;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: #A2A2AC;
+      @include adaptive(767) {
+        padding-bottom: 20px;
+        line-height: normal;
+      }
+    }
+  }
+
+  &__donate {
+    .landing {
+      &__box {
+        max-width: 100%;
+
+        > div {
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: center;
+
+          p {
+            letter-spacing: 3px;
+          }
+        }
+
+        &-wrapper {
+          > div {
+            width: 100%;
+            max-width: 845px;
+            margin-left: auto;
+            margin-right: auto;
+          }
+        }
+      }
     }
   }
 }
